k8s/dvwa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dvwa
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
