k8s/dvwa/dvwa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: dvwa
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      nodeSelector:
        role: apps
      automountServiceAccountToken: false
      serviceAccountName: dvwa-sva
      containers:
        - name: dvwa
          image: ghcr.io/digininja/dvwa:33e364c
          securityContext:
            runAsNonRoot: true
            runAsUser: 998
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /login.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
          volumeMounts:
            - name: dvwa-data
              mountPath: /tmp
            - name: apache-run
              mountPath: /var/run/apache2
            - name: dvwa-uploads
              mountPath: /var/www/html/hackable/uploads

      volumes:
        - name: dvwa-data
          emptyDir: {}
        - name: apache-run
          emptyDir: {}
        - name: dvwa-uploads
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: dvwa-svc
  namespace: dvwa
spec:
  selector:
    app: dvwa
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
