k8s/dvwa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa-ingress
  namespace: dvwa
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:853184314323:certificate/8c8836fc-de57-4a04-95c1-0f1b067d3fc9"
    alb.ingress.kubernetes.io/wafv2-acl-arn: "arn:aws:wafv2:eu-west-1:853184314323:regional/webacl/devsecops-dev-dvwa-waf/c2b842c1-0817-4d28-b464-db32c11df41a"
    alb.ingress.kubernetes.io/load-balancer-attributes: 'routing.http.drop_invalid_header_fields.enabled=true'
    alb.ingress.kubernetes.io/listener-attributes.HTTP-80: 'routing.http.response.server.enabled=false'
    alb.ingress.kubernetes.io/listener-attributes.HTTPS-443: >-
      routing.http.response.server.enabled=false,routing.http.response.strict_transport_security.header_value=max-age=63072000; includeSubDomains; preload
    alb.ingress.kubernetes.io/healthcheck-path: /login.php
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa-svc
                port:
                  number: 80
